--- a/poapache/.kitchen.yml
+++ b/poapache/.kitchen.yml
@@ -18,7 +18,7 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[mufilefol::default]
+      - recipe[poapache::default]
     verifier:
       inspec_tests:
         - test/smoke/default
