--- a/o_cook/.kitchen.yml
+++ b/o_cook/.kitchen.yml
@@ -13,12 +13,13 @@ verifier:
   name: inspec
 
 platforms:
-  - name: centos67
+  - name: ubuntu-16.04
+  - name: centos-7.2
 
 suites:
   - name: default
     run_list:
-      - recipe[sunapache::default]
+      - recipe[o_cook::default]
     verifier:
       inspec_tests:
         - test/smoke/default
